--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pathmatcher",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "micromatch": "^3.1.10"
   },
