--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jurekbarth/pathmatcher",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
   "private": false,
   "main": "index.js",
@@ -11,7 +11,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "micromatch": "^3.1.10"
+    "minimatch": "^3.0.4"
   },
   "devDependencies": {
     "jest": "^23.6.0"
